[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "cortexflow"
version = "0.0.1"
description = "PI0.5 inference pipeline"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"

dependencies = [
    "datasets>=3.0.0,<4.0.0",
    "huggingface-hub[hf-transfer,cli]>=0.34.2,<0.36.0",
    "setuptools>=71.0.0,<81.0.0",
    "einops>=0.8.0,<0.9.0",
    "opencv-python-headless>=4.9.0,<4.13.0",
    "av>=12.0.0,<13.0.0",
    "jsonlines>=4.0.0,<5.0.0",
    "packaging>=24.2,<26.0",
    "torch>=2.2.1",
    "torchvision>=0.17.0",
    "draccus>=0.9.0,<1.0.0",
    "deepdiff>=7.0.1,<9.0.0",
    "imageio[ffmpeg]>=2.34.0,<3.0.0",
    "termcolor>=2.4.0,<4.0.0",
    "transformers @ git+https://github.com/huggingface/transformers.git@fix/lerobot_openpi",
    "scipy>=1.10.1,<1.15", 
    "safetensors>=0.4.3,<1.0.0",
    "numpy",
]

[tool.setuptools.packages.find]
where = ["src"]
